# Perepechin-polynomial-approximation

./: .gitignore  CMakeLists.txt  README.md  calc.py  view.ipynb
data/: chebyshev_coefficients_cos.txt  chebyshev_coefficients_sin.txt  chebyshev_cos.csv  chebyshev_cos_omp.csv  chebyshev_sin.csv  chebyshev_sin_omp.csv  legendre_coefficients_cos.txt  legendre_coefficients_sin.txt  legendre_cos.csv  legendre_cos_omp.csv  legendre_sin.csv  legendre_sin_omp.csv  python_chebyshev_coefficients_cos.txt  python_chebyshev_coefficients_sin.txt  python_legendre_coefficients_cos.txt  python_legendre_coefficients_sin.txt  taylor_cos.csv  taylor_sin.csv
include/: Chebyshev.cpp  Chebyshev.hpp  GramSchmidtProcess.h  Legendre.cpp  Legendre.hpp  LegendrePolynomials.h  Taylor.cpp  Taylor.hpp
python/: chebyshev.py  dotti.py  helper.py  legendre.py  taylor.py  testGenerator.py  view.ipynb
src/: Chebyshev.cpp  GramSchmidtProcess.cpp  Legendre.cpp  LegendrePolynomial.cpp  Taylor.cpp  main.cpp  params.hpp  tests.cpp
src/include/: Chebyshev.hpp  DataResult.h  Legendre.hpp  Taylor.hpp  helper.hpp
